--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,10 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=database.db"
   },
   "AllowedHosts": "*"
 }
