--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=database.db"
+    "DefaultConnection": "DataSource=database.db;"
   },
   "AllowedHosts": "*"
 }
