Updated the algorithm model with the different types of algorithms.

--- a/GeneticAlgNetControl/GeneticAlgNetControl.csproj
+++ b/GeneticAlgNetControl/GeneticAlgNetControl.csproj
@@ -13,6 +13,8 @@
     <Compile Remove="Data\Migrations\20191022081659_Initial.Designer.cs" />
     <Compile Remove="Data\Migrations\20191023074324_Initial.cs" />
     <Compile Remove="Data\Migrations\20191023074324_Initial.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191023075716_Initial.cs" />
+    <Compile Remove="Data\Migrations\20191023075716_Initial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
