Updated the start time of an algorithm to be nullable.

--- a/GeneticAlgNetControl/GeneticAlgNetControl.csproj
+++ b/GeneticAlgNetControl/GeneticAlgNetControl.csproj
@@ -15,6 +15,8 @@
     <Compile Remove="Data\Migrations\20191023074324_Initial.Designer.cs" />
     <Compile Remove="Data\Migrations\20191023075716_Initial.cs" />
     <Compile Remove="Data\Migrations\20191023075716_Initial.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191023104806_Initial.cs" />
+    <Compile Remove="Data\Migrations\20191023104806_Initial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
