Updated the project to use SQL Server for faster development.

--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=database.db;"
+    "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=GeneticAlgNetControl;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "DataSource=database.db;"
   },
   "AllowedHosts": "*"
 }
