--- a/GeneticAlgNetControl/GeneticAlgNetControl.csproj
+++ b/GeneticAlgNetControl/GeneticAlgNetControl.csproj
@@ -19,15 +19,22 @@
     <Compile Remove="Data\Migrations\20191023104806_Initial.Designer.cs" />
     <Compile Remove="Data\Migrations\20191023130710_Initial.cs" />
     <Compile Remove="Data\Migrations\20191023130710_Initial.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191024125606_Initial.cs" />
+    <Compile Remove="Data\Migrations\20191024125606_Initial.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191025113915_Initial.cs" />
+    <Compile Remove="Data\Migrations\20191025113915_Initial.Designer.cs" />
+    <Compile Remove="Data\Migrations\20191025115405_Initial.cs" />
+    <Compile Remove="Data\Migrations\20191025115405_Initial.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="5.22.14" />
-    <PackageReference Include="HangFire" Version="1.7.6" />
+    <PackageReference Include="HangFire" Version="1.7.7" />
     <PackageReference Include="Hangfire.SQLite" Version="1.4.2" />
     <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
