Updated the connection names.

--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SQLConnection": "Server=(localdb)\\mssqllocaldb;Database=GeneticAlgNetControl;Trusted_Connection=True;MultipleActiveResultSets=true;"
-    //"DefaultConnection": "DataSource=database.db;"
+    "SQLServerConnection": "Server=(localdb)\\mssqllocaldb;Database=GeneticAlgNetControl;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"SQLiteConnection": "DataSource=database.db;"
   },
   "AllowedHosts": "*"
 }
