--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLServerConnection": "Server=(localdb)\\mssqllocaldb;Database=GeneticAlgNetControl;Trusted_Connection=True;MultipleActiveResultSets=true;"
-    //"SQLiteConnection": "DataSource=database.db;"
+    "SQLiteConnection": "DataSource=database.db;"
   },
   "AllowedHosts": "*"
 }
