Updated all files to use Analysis instead of Algorithm.

--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -2,5 +2,10 @@
   "ConnectionStrings": {
     "SQLiteConnection": "DataSource=database.db;"
   },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
   "AllowedHosts": "*"
 }
