Fixed small bugs and inconsistencies.

--- a/GeneticAlgNetControl/appsettings.json
+++ b/GeneticAlgNetControl/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQLiteConnection": "DataSource=database.db;"
+    "SQLiteConnection": "DataSource={ApplicationDirectory}/database.db;"
   },
   "Logging": {
     "LogLevel": {
